--- a/tickets.html
+++ b/tickets.html
@@ -57,18 +57,18 @@
 				       	   pattern="\d{3}[\-]\d{3}[\-]\d{4}" title="Must be 999-999-999 format"><br>
 				</fieldset>
 				<fieldset>
-					<legend>Membership Information</legend>
-					<label for="membership_type">Membership Type:</label>
-					<select name="membership_type" id="membership_type">
-				    	<option value="j">Junior</option>
-				    	<option value="r">Regular</option>            
-				    	<option value="c">Charter</option>
-					</select><br>
-					<label for="starting_date">Starting Date:</label>
-					<input type="date" name="starting_date" id="starting_date" required><br>
-					<label for="tickets">Tickets for Guests:</label>
-					<input type="number" name="tickets" id="tickets" value="2" min="1" max="4" placeholder="from 1 to 4"><br>
+				    <legend>Ordering Information</legend>
+				    <label for="order_type">Order Type:</label>
+				    <select name="order_type" id="order_type">
+				        <option value="member">Member Package</option>
+				        <option value="donor">Donor Package</option>
+				        <option value="single">Single Tickets</option>
+				    </select><br>
+				    <label for="tickets">Number of Tickets:</label>
+				    <input type="text" name="tickets" id="tickets" placeholder="Number of single tickets"><br>
 				</fieldset>
+
+
 				<fieldset id="buttons">
 					<legend>Submit Your Membership</legend>
 					<label>&nbsp;</label>
