--- a/tickets.html
+++ b/tickets.html
@@ -67,7 +67,13 @@
 				    <label for="tickets">Number of Tickets:</label>
 				    <input type="text" name="tickets" id="tickets" placeholder="Number of single tickets"><br>
 				</fieldset>
-
+				<fieldset id="payment_method">
+				    <legend>Payment Method</legend>
+				    <input type="radio" name="payment" id="payment1" value="bill">
+				    <label for="payment1">Bill Me</label>
+				    <input type="radio" name="payment" id="payment2" value="credit">
+				    <label for="payment2">Credit Card</label>
+				</fieldset>
 
 				<fieldset id="buttons">
 					<legend>Submit Your Membership</legend>
