--- a/tickets.html
+++ b/tickets.html
@@ -74,7 +74,38 @@
 				    <input type="radio" name="payment" id="payment2" value="credit">
 				    <label for="payment2">Credit Card</label>
 				</fieldset>
-
+				<fieldset id="credit_card_info">
+				    <legend>Credit Card Information</legend>
+				    <label for="card_type">Card Type:</label>
+				    <select name="card_type" id="card_type">
+				        <option value="visa">Visa</option>
+				        <option value="mastercard">MasterCard</option>
+				        <option value="discover">Discover</option>
+				    </select><br>
+				    <label for="card_number">Card Number:</label>
+				    <input type="text" name="card_number" id="card_number" placeholder="16 digits" required pattern="\d{16}"><br>
+				   <select name="expiration_month" id="expiration_month" style="width: 7em;">
+				        <option value="j">Janurary</option>
+				        <option value="f">February</option>
+				        <option value="m">March</option>
+					<option value="a">April</option>
+				        <option value="may">May</option>
+				        <option value="june">June</option>
+					<option value="july">July</option>
+				        <option value="aug">August</option>
+				        <option value="sep">September</option>
+					<option value="o">October</option>
+				        <option value="n">November</option>
+				        <option value="d">December</option>
+				    </select>
+				    <select name="expiration_year" id="expiration_year" style="width: 5em;">
+				         <option value="y1">2024</option>
+					 <option value="y2">2025</option>
+					 <option value="y3">2026</option>
+					 <option value="y4">2027</option>
+					 <option value="y5">2028</option>
+				    </select><br>
+				</fieldset>
 				<fieldset id="buttons">
 					<legend>Submit Your Membership</legend>
 					<label>&nbsp;</label>
