--- a/tickets.html
+++ b/tickets.html
@@ -84,7 +84,8 @@
 				    </select><br>
 				    <label for="card_number">Card Number:</label>
 				    <input type="text" name="card_number" id="card_number" placeholder="16 digits" required pattern="\d{16}"><br>
-				   <select name="expiration_month" id="expiration_month" style="width: 7em;">
+				   <label for="card_type">Card Type:</label>
+					<select name="expiration_month" id="expiration_month" style="width: 7em;">
 				        <option value="j">Janurary</option>
 				        <option value="f">February</option>
 				        <option value="m">March</option>
